 * The Javadoc API documentation for the source code.  This is not
   distributed with Daikon, but you can build it by executing the command
     make -C $DAIKONDIR/java javadoc
   It is also available at http://plse.cs.washington.edu/daikon/download/api/ .

===========================================================================

Daikon no longer uses the plume-lib repository, but smaller ones such as
plume-scripts.

===========================================================================

5.6.6 (July 2, 2018)

DynComp:
- Fix issue #129 - Too many parameters for an annotation method.

Fjalar/Kvasir:
- Fix issue #27 - Incorrect categorization of some SIMD instructions.

===========================================================================

5.6.4 (April 3, 2018)

Eliminate reliance on plume.jar file, in favor of smaller libraries
(checklink, html-tools, options, plume-util, etc.).

Fjalar/Kvasir:
- We updated the underlying Binutils infrastructure to version 2.30.

The --wrap_xml command-line option now produces valid XML.

===========================================================================

5.6.2 (February 2, 2018)

It is no longer necessary to set the DAIKONDIR environment variable when
using or building Daikon.

Fjalar/Kvasir:
- We updated the underlying Valgrind infrastructure to version 3.13.0.
- We updated the underlying Binutils infrastructure to version 2.29.1.
- Improved Ubuntu 17.10 support.

===========================================================================

5.6.0 (December 4, 2017)

Support was added for Ubuntu 17.10.  Please see User Guide notes about using
the -no-pie option on gcc.

DynComp:
- Fixed a few DynComp bugs.

===========================================================================

5.5.14 (October 3, 2017)

Chicory:
- Fixed a couple of Chicory bugs.

Updated our internal version of BCEL to match Apache version 6.1.
Daikon will fail if some other version of BCEL is found first on the classpath.
