@@ -59,8 +59,6 @@ if [[ "${GROUP}" == "misc" || "${GROUP}" == "all" ]]; then
   make -C java error-prone
 
   # Code formatting
-  # Problem: this target requires Java 8, but is being run under Java 7.
-  # It is failing, but is not failing the build.  Why?
   make -C java check-format
 
   # Documentation
