@@ -18,7 +18,7 @@ To stop and remove/delete all docker containers:
 or you can just remove some of them.
 
 # Create the Docker image, in an empty directory, and upload to Docker Hub.
-# Takes about 12 minutes for jdk7 or jdk8, about 1 hour for jdkany.
+# Takes about 12 minutes for jdk8, about 1 hour for jdkany.
 alias create_upload_docker_image=' \
   rm -rf dockerdir && \
   mkdir -p dockerdir && \
@@ -27,11 +27,6 @@ alias create_upload_docker_image=' \
   docker build -t mdernst/$OS-for-$PROJECT-$JDKVER . && \
   docker push mdernst/$OS-for-$PROJECT-$JDKVER) && \
   rm -rf dockerdir'
-
-export OS=ubuntu
-export JDKVER=jdk7
-export PROJECT=daikon
-create_upload_docker_image
 
 export OS=ubuntu
 export JDKVER=jdk8
