@@ -1,30 +1,0 @@
-# Create a Docker image that is ready to run the Daikon tests,
-# using JDK 7.
-
-FROM ubuntu
-MAINTAINER Michael Ernst <mernst@cs.washington.edu>
-
-# According to
-# https://docs.docker.com/engine/userguide/eng-image/dockerfile_best-practices/:
-#  * Put "apt-get update" and "apt-get install" in the same RUN command.
-#  * Do not run "apt-get upgrade"; instead get upstream to update.
-RUN apt-get -qqy update && apt-get -qqy install \
-  software-properties-common \
-&& add-apt-repository ppa:openjdk-r/ppa \
-&& apt-get -qqy update && apt-get -qqy install \
-  autoconf \
-  automake \
-  bc \
-  binutils-dev \
-  ctags \
-  gcc \
-  git \
-  graphviz \
-  m4 \
-  make \
-  netpbm \
-  unzip \
-  openjdk-7-jdk \
-&& apt-get -qqy remove openjdk-8-jre-headless:amd64 \
-&& apt-get clean \
-&& rm -rf /var/lib/apt/lists/*
